circular dep sample
