# sample/sample-api/Models/Node.cs
@@ -1,0 +1,5 @@
+public class Node 
+{
+  public string Name { get; set; } = null!;
+  public List<Node> Children { get; set; } = new List<Node>();
+}
